# proteosim_sofia

./: LICENSE  README.md  ms_experiment_final.ipynb  requirements.txt
Proteosim_sofia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: dummy_fasta.fasta
proteosim/: __init__.py  file_handling.py  liquid_chromatography.py  mass_spectra_simulation.py  protein_digestion.py
proteosim/.github/workflows/: tests.yml
templates/: pyproject.toml
tests/: __init__.py  test_file_handling.py  test_liquid_chromatography.py  test_mass_spectra_simulation.py  test_protein_digestion.py
